WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310710
[css-values-5 attr()] Invalidate on attribute change
https://bugs.webkit.org/show_bug.cgi?id=310710
Summary
[css-values-5 attr()] Invalidate on attribute change
Antti Koivisto
Reported
2026-03-25 07:17:32 PDT
Invalidation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-25 07:17:45 PDT
<
rdar://problem/173322919
>
Antti Koivisto
Comment 2
2026-03-25 08:04:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61329
EWS
Comment 3
2026-03-25 12:49:34 PDT
Committed
309934@main
(94d12232a351): <
https://commits.webkit.org/309934@main
> Reviewed commits have been landed. Closing PR #61329 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug