[css-values-5 attr()] Invalidate on attribute change https://bugs.webkit.org/show_bug.cgi?id=310710 rdar://173322919

Reviewed by Sam Weinig.

* LayoutTests/imported/w3c/web-platform-tests/css/css-values/attr-invalidation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/attr-null-namespace-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/attr-pseudo-elem-invalidation-expected.txt:
* Source/WebCore/style/AttributeChangeInvalidation.cpp:
(WebCore::Style::AttributeChangeInvalidation::invalidateStyle):
* Source/WebCore/style/RuleFeature.cpp:
(WebCore::Style::RuleFeatureSet::add):
(WebCore::Style::RuleFeatureSet::registerSubstitutionAttribute):
(WebCore::Style::RuleFeatureSet::clear):
(WebCore::Style::RuleFeatureSet::registerContentAttribute): Deleted.

Change the names to not be just about `content` property anymore.

* Source/WebCore/style/RuleFeature.h:
* Source/WebCore/style/StyleBuilderState.cpp:
(WebCore::Style::BuilderState::registerSubstitutionAttribute):

Register unconditionally, not just for ::before/::after.

(WebCore::Style::BuilderState::registerContentAttribute): Deleted.
* Source/WebCore/style/StyleBuilderState.h:
* Source/WebCore/style/StyleResolver.cpp:
(WebCore::Style::Resolver::setGlobalStateAfterApplyingProperties):
* Source/WebCore/style/StyleSubstitutionResolver.cpp:
(WebCore::Style::SubstitutionResolver::substituteAttrFunction):
* Source/WebCore/style/values/content/StyleContent.cpp:
(WebCore::Style::CSSValueConversion<Content>::operator):

Canonical link: https://commits.webkit.org/309934@main